# simagents

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: crewai-result.md  langchain-result.md  research_prompt_plan.py
src/simagents/: __init__.py  agent.py
src/simagents/core/: __init__.py  models.py
src/simagents/llm/: __init__.py  provider.py
src/simagents/orchestration/: __init__.py  orchestrator.py
src/simagents/utils/: __init__.py  artifacts.py  cache.py  logging_utils.py  retry.py
src/simagents/web_search/: __init__.py  provider.py
tests/: test_cache.py  test_models.py  test_orchestrator.py  test_retry.py  test_web_search.py
