[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simagents"
version = "0.2.2"
description = "Lightweight multi-agent orchestration with prompt-planning workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "simagents" }]
keywords = ["agents", "llm", "orchestration", "multi-agent", "prompt-engineering"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
license-files = ["LICENSE"]
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "openai>=2.0.0",
  "anthropic>=0.34.0",
]

[project.urls]
Homepage = "https://github.com/im-sanka/simagents"
Repository = "https://github.com/im-sanka/simagents"
Issues = "https://github.com/im-sanka/simagents/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
